--- a/README.Rmd
+++ b/README.Rmd
@@ -39,15 +39,15 @@ If you have additional questions about these changes, email CompTools@usgs.gov.
 
 1. Get instantaneous USGS data (for example, discharge sensor data). Start here: `?readNWISuv`
 
-2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_USGS_daily`
+2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_waterdata_daily`
 
 3. Get USGS groundwater data. Start here: `?readNWISgwl`
 
 4. Get discrete water quality data from a cooperative service that integrates publicly available water-quality data from the USGS, EPA, and over 400 state, federal, tribal, and local agencies. Start here: `?readWQPdata`
 
-5. Get USGS discrete water quality data. Start here: `?read_USGS_samples`
+5. Get USGS discrete water quality data. Start here: `?read_waterdata_samples`
 
-6. Get metadata about USGS time series data, including instantaneous and daily data. Start here: `?read_USGS_ts_meta`
+6. Get metadata about USGS time series data, including instantaneous and daily data. Start here: `?read_waterdata_ts_meta`
 
 7. Find Hydro Network-Linked Data Index (NLDI) data. Start here: `?findNLDI`
 
@@ -88,7 +88,7 @@ You can use `usethis::edit_r_environ()` to edit find and open your .Renviron fil
 
 ### Style
 
-New functions will use a "snake case", such as "read_USGS_samples". Older functions use camel case, such as "readNWISdv". The difference is the underscore between words. This should be a handy way to tell the difference between newer modern data access, and the older traditional functions. 
+New functions will use a "snake case", such as "read_waterdata_samples". Older functions use camel case, such as "readNWISdv". The difference is the underscore between words. This should be a handy way to tell the difference between newer modern data access, and the older traditional functions. 
 
 ### Structure
 
@@ -96,7 +96,7 @@ Historically, we allowed users to customize their queries via the `...` argument
 
 ### Dependencies
 
-As we develop functions for the modern USGS web services, we'll continue to explore updating package dependencies.  
+As we develop functions for the modern USGS Water Data APIs, we'll continue to explore updating package dependencies.  
 
 ### Developmental workflow
 
